[package]
name = "ukanren"
version = "0.0.5"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
license = "MIT"
description = "Rust implementation of µKanren, a featherweight relational programming language."
repository = "https://github.com/ekzhang/ukanren-rs"
documentation = "https://docs.rs/ukanren"
keywords = ["kanren", "prolog", "logic-programming", "language"]
readme = "README.md"
edition = "2018"

[dependencies]
rpds = "0.9.0"
itertools = "0.10.1"
take_mut = "0.2.2"
